// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - areas.content - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <LayoutBlock
          blockId="areas.content_layout"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
      "id": "areas.content",
    },
    Object {},
  ],
]
`;

exports[`Mock render - areas.footer - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <LayoutBlock
          blockId="areas.footer_layout"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
      "id": "areas.footer",
    },
    Object {},
  ],
]
`;

exports[`Mock render - areas.header - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <LayoutBlock
          blockId="areas.header_layout"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
      "id": "areas.header",
    },
    Object {},
  ],
]
`;

exports[`Mock render - areas.sider - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <SiderBlock
          blockId="areas.sider_sider"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={Object {}}
          rename={
            Object {
              "events": Object {
                "onClose": "onSiderClose",
                "onOpen": "onSiderOpen",
              },
              "methods": Object {
                "setOpen": "setSiderOpen",
                "toggleOpen": "toggleSiderOpen",
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <LayoutBlock
          blockId="areas.sider_layout"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
      "id": "areas.sider",
    },
    Object {},
  ],
]
`;

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <LayoutBlock
          blockId="default_layout"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
      "id": "default",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.content.style: border: 5px solid blue - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <SiderBlock
          blockId="properties.content.style: border: 5px solid blue_sider"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={Object {}}
          rename={
            Object {
              "events": Object {
                "onClose": "onSiderClose",
                "onOpen": "onSiderOpen",
              },
              "methods": Object {
                "setOpen": "setSiderOpen",
                "toggleOpen": "toggleSiderOpen",
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <LayoutBlock
          blockId="properties.content.style: border: 5px solid blue_layout"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
      "id": "properties.content.style: border: 5px solid blue",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.footer.style: border: 5px solid blue - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <SiderBlock
          blockId="properties.footer.style: border: 5px solid blue_sider"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={Object {}}
          rename={
            Object {
              "events": Object {
                "onClose": "onSiderClose",
                "onOpen": "onSiderOpen",
              },
              "methods": Object {
                "setOpen": "setSiderOpen",
                "toggleOpen": "toggleSiderOpen",
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <LayoutBlock
          blockId="properties.footer.style: border: 5px solid blue_layout"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
      "id": "properties.footer.style: border: 5px solid blue",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.header.color: #4432a8  - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <SiderBlock
          blockId="properties.header.color: #4432a8 _sider"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={Object {}}
          rename={
            Object {
              "events": Object {
                "onClose": "onSiderClose",
                "onOpen": "onSiderOpen",
              },
              "methods": Object {
                "setOpen": "setSiderOpen",
                "toggleOpen": "toggleSiderOpen",
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <LayoutBlock
          blockId="properties.header.color: #4432a8 _layout"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
      "id": "properties.header.color: #4432a8 ",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.header.style: border: 5px solid blue - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <SiderBlock
          blockId="properties.header.style: border: 5px solid blue_sider"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={Object {}}
          rename={
            Object {
              "events": Object {
                "onClose": "onSiderClose",
                "onOpen": "onSiderOpen",
              },
              "methods": Object {
                "setOpen": "setSiderOpen",
                "toggleOpen": "toggleSiderOpen",
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <LayoutBlock
          blockId="properties.header.style: border: 5px solid blue_layout"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
      "id": "properties.header.style: border: 5px solid blue",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.header.theme: light - dark is default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <SiderBlock
          blockId="properties.header.theme: light - dark is default_sider"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={Object {}}
          rename={
            Object {
              "events": Object {
                "onClose": "onSiderClose",
                "onOpen": "onSiderOpen",
              },
              "methods": Object {
                "setOpen": "setSiderOpen",
                "toggleOpen": "toggleSiderOpen",
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <LayoutBlock
          blockId="properties.header.theme: light - dark is default_layout"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
      "id": "properties.header.theme: light - dark is default",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.main.style: border: 5px solid blue - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <SiderBlock
          blockId="properties.main.style: border: 5px solid blue_sider"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={Object {}}
          rename={
            Object {
              "events": Object {
                "onClose": "onSiderClose",
                "onOpen": "onSiderOpen",
              },
              "methods": Object {
                "setOpen": "setSiderOpen",
                "toggleOpen": "toggleSiderOpen",
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <LayoutBlock
          blockId="properties.main.style: border: 5px solid blue_layout"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "border": "5px solid blue",
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
      "id": "properties.main.style: border: 5px solid blue",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.sider.style: border: 5px solid blue - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <SiderBlock
          blockId="properties.sider.style: border: 5px solid blue_sider"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "border": "5px solid blue",
              },
            }
          }
          rename={
            Object {
              "events": Object {
                "onClose": "onSiderClose",
                "onOpen": "onSiderOpen",
              },
              "methods": Object {
                "setOpen": "setSiderOpen",
                "toggleOpen": "toggleSiderOpen",
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <LayoutBlock
          blockId="properties.sider.style: border: 5px solid blue_layout"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
      "id": "properties.sider.style: border: 5px solid blue",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.sider.theme: light - dark is default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <SiderBlock
          blockId="properties.sider.theme: light - dark is default_sider"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "theme": "light",
            }
          }
          rename={
            Object {
              "events": Object {
                "onClose": "onSiderClose",
                "onOpen": "onSiderOpen",
              },
              "methods": Object {
                "setOpen": "setSiderOpen",
                "toggleOpen": "toggleSiderOpen",
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <LayoutBlock
          blockId="properties.sider.theme: light - dark is default_layout"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
      "id": "properties.sider.theme: light - dark is default",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.style: border: 5px solid blue - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <SiderBlock
          blockId="properties.style: border: 5px solid blue_sider"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "border": "5px solid blue",
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\",\\"border\\":\\"5px solid blue\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={Object {}}
          rename={
            Object {
              "events": Object {
                "onClose": "onSiderClose",
                "onOpen": "onSiderOpen",
              },
              "methods": Object {
                "setOpen": "setSiderOpen",
                "toggleOpen": "toggleSiderOpen",
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <LayoutBlock
          blockId="properties.style: border: 5px solid blue_layout"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "border": "5px solid blue",
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\",\\"border\\":\\"5px solid blue\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "{\\"style\\":{\\"minHeight\\":\\"100vh\\",\\"border\\":\\"5px solid blue\\"}}",
      "id": "properties.style: border: 5px solid blue",
    },
    Object {},
  ],
]
`;
